# N-Body-Gravity-Simulator3-D

./: CMakeLists.txt  readme.md
Docs/: Phase1.md  logs.md
shaders/: particle.frag  particle.vert
src/: main.cpp  self.cpp
